--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "mongoose": "^5.1.6",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -110,5 +111,5 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy":"http://localhost:9093" 
+  "proxy": "http://localhost:9093"
 }
